Change home page title from HOME to Home to test commit

--- a/templates/home.html
+++ b/templates/home.html
@@ -27,7 +27,7 @@
 
   <hr>
   
-  <h1 title = "Welcome, {{ user.username }}!">HOME</h1>
+  <h1 title = "Welcome, {{ user.username }}!">Home</h1>
 
   <hr>
 
