--- a/templates/home.html
+++ b/templates/home.html
@@ -33,6 +33,8 @@
 
   <h2>{{slogan}}</h2>
 
+  <p>{{user.username}}</p>
+
   <div class = "meal_info">
     <div class="container">
         <div class="row">
