fixed the weight form so users can only input their weight once per day, and can edit it on the day if they need to

--- a/templates/settings.html
+++ b/templates/settings.html
@@ -23,7 +23,7 @@
 {% if user.is_authenticated %}
     <h1>Settings</h1>
     
-    <form method="post" action="/settings/" style="margin-left: 20px; margin-top: 20px"> {%csrf_token%}
+    <form method="post" style="margin-left: 20px; margin-top: 20px"> {%csrf_token%}
         <p>Choose the restriction that applies</p>
             {{ form.as_p }}
             <button type="submit" name="save" class="btn btn-success">Save</button>
