fixed the randomize reworking so meals won't re-randomize when save or favorites button is clicked

--- a/templates/base.html
+++ b/templates/base.html
@@ -21,7 +21,7 @@
     
     <body>
             <div class = "sidenav">
-                <a href="/home">Home</a>
+                <a href="/redirect_to_specific_meal/">Home</a>
                 <a href="/weight">Weight Tracker</a>
                 <a href="/ingredients">Ingredients</a>
                 <a href="/favorites">Favorites</a>
