--- a/templates/home.html
+++ b/templates/home.html
@@ -51,7 +51,7 @@
                             </div>
                         <p>
                             <div class="divider"></div>
-                            <a href = "{% url 'home' %}?randomize=1" 
+                            <a href = "{% url 'redirect_to_specific_meal' %}?randomize=1" 
                             style="
                             text-decoration:none; 
                             color:black"
