--- a/templates/mealList.html
+++ b/templates/mealList.html
@@ -15,7 +15,7 @@
         </a>
     </button>
     <button class="btn btn-success">
-        <a href="/home" 
+        <a href="/redirect_to_specific_meal/" 
         style="color: white; text-decoration: unset;"
         title="Go to Home">
             Go to Home
