--- a/templates/mealList.html
+++ b/templates/mealList.html
@@ -7,18 +7,11 @@
 <link rel="stylesheet" href="{% static 'css/main.css' %}">
 
 <p style = "margin-top:10px">
-    <button class="btn btn-success">
-        <a href="/browse" 
-        style="color: white; text-decoration: unset;"
-        title="Back to Browse">
-            Back to Browse
-        </a>
-    </button>
-    <button class="btn btn-success">
-        <a href="/redirect_to_specific_meal/" 
-        style="color: white; text-decoration: unset;"
+    <button class="btn" style="background-color: transparent;">
+        <a href="{% url 'redirect_to_specific_meal' %}" 
+        style="color: #1c8454; text-decoration: unset;"
         title="Go to Home">
-            Go to Home
+            <i class="fas fa-arrow-left fa-lg"></i>
         </a>
     </button>
 </p>
