--- a/templates/browse.html
+++ b/templates/browse.html
@@ -23,7 +23,7 @@
                     {{n.name}}
                 </p>
                 <p>
-                    <a href="/browse/{{n.id}}">
+                    <a href="{% url 'mealObject' n.pk %}">
                         <img style = 
                         "width:300px; 
                         height:300px; 
