--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -36,7 +36,7 @@ Login Page
     <button type="submit" class = "btn btn-success">Log In</button>
   </form>
   <br>
-  <p class = "createNew">Don't have an account? Create one <a href="/signup">here!</a></p>
+  <p class = "createNew">Don't have an account? Create one <a href="{% url 'signup' %}">here!</a></p>
 </body>
 
 {% endblock %}
