--- a/templates/registration/signup.html
+++ b/templates/registration/signup.html
@@ -42,6 +42,6 @@
       <button type="submit" class = "btn btn-success">Sign Up</button>
     </form>
     <br>
-    <p>Already have an account? Login <a href="/login">here!</a></p>
+    <p>Already have an account? Login <a href="{% url 'login' %}">here!</a></p>
   </body>
 {% endblock %}
