--- a/templates/settings.html
+++ b/templates/settings.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-{% load static %}
+{% load static crispy_forms_tags %}
 
 <link rel="stylesheet" href="{% static 'css/main.css' %}">
 
@@ -24,8 +24,8 @@
     <h1>Settings</h1>
     
     <form method="post" style="margin-left: 20px; margin-top: 20px"> {%csrf_token%}
-        <p>Choose the restriction that applies</p>
-            {{ form.as_p }}
+        <h2 style="text-align: left; margin-left: 0px;" title="Choose the restriction that applies.">Restrictions</h2>
+            <p style="text-align: left;">{{ form.restrictions|as_crispy_field }}</p>
             <button type="submit" name="save" class="btn btn-success">Save</button>
     </form>
     <form>
