--- a/templates/settings.html
+++ b/templates/settings.html
@@ -6,20 +6,6 @@
 
 <link rel="stylesheet" href="{% static 'css/main.css' %}">
 
-<!--<style>
-    h1 {
-    color: rgb(3, 97, 11);
-    font-weight: 500;
-    font-weight: bold;
-    font-size: 300%;
-    padding: 20px;
-    margin-right: 300px;
-    margin-left: 300px;
-    text-align: center;
-    margin-top: 0px;
-    }
-</style>-->
-
 {% if user.is_authenticated %}
     <h1>Settings</h1>
     
@@ -32,6 +18,8 @@
         Dietary Strictness
     </form>
     
+    <p> Logout <a href="/logout" style="color:green">here!</a></p>
+
 {% else %}
     <p class="loggedOut">Please Login <a href="/login">here!</a></p>
 {% endif %}
