splitting the ingredient names into quantities and actual ingredients

--- a/templates/ingredients.html
+++ b/templates/ingredients.html
@@ -17,7 +17,7 @@
         -->
                 <p><div style="margin-left: 20px;">
                     <input type="checkbox" data-user_ingredient_id="{{ingredient.id}}" class="ing_checkbox"> 
-                    &nbsp;&nbsp;&nbsp;{{ingredient.ingredient.name}}
+                    &nbsp;&nbsp;&nbsp;{{ingredient.ingredient.split_name}}
                 </div></p>
             {% endfor %}
         {% endfor %}
