--- a/templates/ingredients.html
+++ b/templates/ingredients.html
@@ -11,15 +11,13 @@
 
     <form id="ingredient_form"> 
     {% csrf_token %}
-        {% for meal in mealIng %}
-            {% for ingredient in meal.all %}
-            <!-- data attribute that contains the id of the thing you want to modify
-        -->
-                <p><div style="margin-left: 20px;">
-                    <input type="checkbox" data-user_ingredient_id="{{ingredient.id}}" class="ing_checkbox"> 
-                    &nbsp;&nbsp;&nbsp;{{ingredient.ingredient.split_name}}
-                </div></p>
-            {% endfor %}
+        {% for ingredient in mealIng %}
+        <!-- data attribute that contains the id of the thing you want to modify
+    -->
+            <p><div style="margin-left: 20px;">
+                <input type="checkbox" data-user_ingredient_id="{{ingredient.id}}" class="ing_checkbox"> 
+                &nbsp;&nbsp;&nbsp;{{ingredient.quantity}} {{ingredient.ingredient}} <!--names given in the dictionary-->
+            </div></p>
         {% endfor %}
     </form>
 
