--- a/templates/weight.html
+++ b/templates/weight.html
@@ -11,8 +11,8 @@ Weight Tracker
 <link rel="stylesheet" href="{% static 'css/main.css' %}">
 <script src="https://cdn.jsdelivr.net/npm/chart.js@3.5.1/dist/chart.min.js"></script>
 
-<div style="height: 300px; width: 1000px;">
-    <canvas id="myChart" width="300" height="80"></canvas>
+<div>
+    <canvas id="myChart" width="300" height="100"></canvas>
     <script>
     var ctx = document.getElementById('myChart').getContext('2d');
     var myChart = new Chart(ctx, {
@@ -55,7 +55,6 @@ Weight Tracker
 
 {% if user.is_authenticated %}
 
-    
     <form method = "post" style="margin-left: 20px; margin-top: 20px"> {%csrf_token%}
         <div class = "input-group mb-3" style = text-align:center>
             <div class = "input-group-prepend">
