--- a/templates/base.html
+++ b/templates/base.html
@@ -26,7 +26,9 @@
                 <a href="{% url 'ingredients' %}">Ingredients</a>
                 <a href="{% url 'favorites' %}">Favorites</a>
                 <a href="{% url 'settings' %}">Settings</a>
-                <a href="{% url 'browse' %}">Browse Meals</a>
+                {% if user.is_superuser %}
+                    <a href="{% url 'browse' %}">Browse Meals</a>
+                {% endif %}
             </div>
 
         <div class = "main">
