--- a/templates/favorites.html
+++ b/templates/favorites.html
@@ -16,12 +16,21 @@
 
         <br>
 
-        <form method="get" style="margin-left: 20px; margin-top: 20px">
-            <h2 style="text-align: left; margin-left: 0px;" title="Choose the restriction that applies.">Filter by</h2>
-                <p style="text-align: left;">{{ form.restrictions|as_crispy_field }}</p>
-                <p>{{ sort_form }}</p>
-                <button type="submit" class="btn btn-success">Go</button>
-        </form>
+        <h2 style="text-align: left; margin-left: 0px;" title="Choose the restriction that applies.">
+            Filter & Sort 
+            <a href="#filter" data-bs-toggle="collapse" style="color: black; padding-left: 0.5em;">
+                <i class="fas fa-angle-down"></i>
+            </a>
+        </h2>
+        <div id="filter" class="collapse">
+            <form method="get" style="margin-left: 20px; margin-top: 20px">
+                    <div class="horizontal_checkboxes">
+                        FILTER BY: {{ form|crispy}}
+                    </div>
+                    <div class="sort_faves">{{ sort_form }}</div>
+                    <button type="submit" class="btn btn-success">Go</button>
+            </form>
+        </div>
 
         <div class="container">
             <div class="row">
