--- a/templates/ingredients.html
+++ b/templates/ingredients.html
@@ -9,9 +9,12 @@
 {% if user.is_authenticated %}
     <h1>Ingredients</h1> 
 
-    <form method="get" style="margin-left: 20px; margin-top: 20px">
-            <p>{{ sort_form }}</p>
-            <button type="submit" class="btn btn-success">Go</button>
+    <form method="get" style="margin-left: 20px; margin-top: 20px;">
+            <div class="sort_ings">{{ sort_form }}
+                <button type="submit" class="btn btn-success" style="height:30px; text-align:center; line-height:1">
+                    Go
+                </button>
+            </div>  
     </form>
 
     <form id="ingredient_form"> 
